--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=Pratham@123
 DB_NAME=blog_db
-JWT_SECRET=your_secret_key
+JWT_SECRET=supersecretkey # Can be any random string for now
